<resources>
    <string name="app_name">BusinessCard</string>
    <string name="label_businiss_cards">Cartão de Visitas</string>
    <string name="label_description_new_card">Novo Cartão</string>
    <string name="label_nome">Nome</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_email">Email</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_cor">Cor</string>
    <string name="label_confirmar">Confirmar</string>
    <string name="label_show_success">Seu Cartão Inter foi Cadastrado com sucesso.
        Parabéns!</string>
    <string name="label_share_to">Cadastra</string>
</resources>